[package]
name = "murray-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.58"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"