[package]
name = "murray-rs"
description = "A rust implementation of Murray"
version = "0.1.0"
authors = ["Guilherme Pereira <guilospanck@protonmail.com>"]
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/Guilospanck/murray-rs"
repository = "https://github.com/Guilospanck/murray-rs"
readme = "README.md"
keywords = ["murray", "lightning", "mempool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.58"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
httpmock = "0.7.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"